//// ------------------------------------------------------
//// THIS FILE WAS AUTOMATICALLY GENERATED (DO NOT MODIFY)
//// ------------------------------------------------------

Table User {
  id Int [pk, increment]
  userKey String [unique, not null]
  email String [unique, not null]
  fullName String [unique, not null]
  emailVerifiedAt DateTime
  userPin UserPin
  createdAt DateTime [default: `now()`, not null]
  updatedAt DateTime [not null]
  accounts UserAccounts [not null]
}

Table UserPin {
  id Int [pk, increment]
  userId Int [unique, not null]
  pin String [not null]
  user User [not null]
  createdAt DateTime [default: `now()`, not null]
  updatedAt DateTime [not null]
}

Table UserAccounts {
  id Int [pk, increment]
  userId Int [not null]
  bankName String [not null]
  accountName String [not null]
  accountNumber String [not null]
  accountKey String [unique, not null]
  currency String [not null]
  meta String [not null]
  balance Decimal [not null]
  user User [not null]
  createdAt DateTime [default: `now()`, not null]
  updatedAt DateTime [not null]
  budgets Budget [not null]
}

Table Budget {
  id Int [pk, increment]
  frequency BudgetFrequency [not null, default: 'Custom']
  name String [not null]
  category String [not null]
  alert Int
  startDate DateTime [not null]
  endDate DateTime
  userAccountId Int [not null]
  budgeted Decimal [not null]
  spent Decimal
  budgetKey String [unique, not null]
  createdAt DateTime [default: `now()`, not null]
  updatedAt DateTime [not null]
  userAccount UserAccounts [not null]
  budgetItems BudgetItem [not null]
}

Table BudgetItem {
  id Int [pk, increment]
  name String [not null]
  category String [not null]
  budgetId Int [not null]
  total Decimal [not null]
  spent Decimal
  budgetItemKey String [unique, not null]
  budget Budget [not null]
  createdAt DateTime [default: `now()`, not null]
  updatedAt DateTime [not null]
}

Enum BudgetFrequency {
  Monthly
  Annually
  Weekly
  BiAnnually
  Quarterly
  Custom
}

Ref: UserPin.userId - User.id

Ref: UserAccounts.userId > User.id

Ref: Budget.userAccountId > UserAccounts.id

Ref: BudgetItem.budgetId > Budget.id